@@ -5,6 +5,6 @@ import java.nio.file.Path;
 public class NoContentFoundException extends Exception {
 
     public NoContentFoundException(Path destination) {
-        super(String.format("Destination file %s does not exist or empty", destination.toAbsolutePath()));
+        super("Destination file %s does not exist or empty".formatted(destination.toAbsolutePath()));
     }
 }
